Fix too small img in a element (max-width set by css reset)

--- a/admin/style/default.css
+++ b/admin/style/default.css
@@ -1845,6 +1845,7 @@ a:link img,
 a:visited img {
   border: none;
   background: initial;
+  max-width: initial;
 }
 
 a:hover,
