--- a/admin/style/scss/partials/_markup.scss
+++ b/admin/style/scss/partials/_markup.scss
@@ -186,6 +186,7 @@ a:visited {
   img {
     border: none;
     background: initial;
+    max-width: initial;
   }
 }
 
